tests/baselines/reference/parserEqualsGreaterThanAfterFunction1.errors.txt
==== tests/cases/compiler/parserEqualsGreaterThanAfterFunction1.ts (3 errors) ====
    function =>
             ~~
!!! parserEqualsGreaterThanAfterFunction1.ts(1,10): error TS1003: Identifier expected.
               
!!! parserEqualsGreaterThanAfterFunction1.ts(1,12): error TS1109: Expression expected.
             ~~
!!! parserEqualsGreaterThanAfterFunction1.ts(1,10): error TS2238: Function implementation expected.